--- a/src/main/res/layout/home_header.xml
+++ b/src/main/res/layout/home_header.xml
@@ -3,9 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
     <TextView
         android:id="@+id/tv_home_header"
-        android:textSize="48dp"
+        android:textSize="36dp"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
+    </android.support.design.widget.AppBarLayout>
+
+
 </LinearLayout>
